# lv_port_actions_technology

./: .gitignore  README.md  lv_conf.defaults
action_technology_sdk/application/app_demo/usbd_msc_demo/: CMakeLists.txt  nvram.prop  prj.conf
action_technology_sdk/bootloader/drivers/spinand/: CMakeLists.txt  Kconfig.acts  spinand.lib
action_technology_sdk/bootloader/framework/: CMakeLists.txt  Kconfig
action_technology_sdk/bootloader/framework/display/: CMakeLists.txt  Kconfig  display_composer.lib  display_composer_opt.c  sw_blend.c  sw_math.c  sw_rotate.c  ui_memsetcpy.c
action_technology_sdk/bootloader/framework/dma2d/: CMakeLists.txt
action_technology_sdk/bootloader/framework/include/: audio_hal.h  dma2d_hal.h  dsp_hal.h  hr_algo.h  key_hal.h  os_common_api.h  sensor_hal.h  sys_manager.h
action_technology_sdk/bootloader/framework/key/: key_hal.c
action_technology_sdk/bootloader/framework/memory/: mem_cache.c
action_technology_sdk/bootloader/framework/misc/: CMakeLists.txt
action_technology_sdk/bootloader/framework/osal/: Kconfig  os_wrapper.c  user_work_q.c
action_technology_sdk/framework/bluetooth/: CMakeLists.txt  Kconfig
action_technology_sdk/framework/bluetooth/bt_manager/: CMakeLists.txt  bt_manager.c  bt_manager_a2dp.c  bt_manager_ble.c  bt_manager_check_mac_name.c  bt_manager_config.c  bt_manager_discover.c  bt_manager_hfp_ag.c  bt_manager_inner.h  bt_manager_ips.c  bt_manager_map.c  bt_manager_pbap.c  bt_manager_pts_test.c  bt_manager_shell.c  bt_manager_spp.c  bt_manager_sppble_stream.c  bt_manager_test_sample.c
action_technology_sdk/framework/bluetooth/bt_porting/: bt_porting_inner.h
action_technology_sdk/framework/bluetooth/bt_service/: CMakeLists.txt  btsrv_config.h  btsrv_main.c
action_technology_sdk/framework/bluetooth/bt_stack/: Kconfig  Kconfig.audio  Kconfig.host  bt_stack.lib
action_technology_sdk/framework/bluetooth/bt_trans/: Kconfig  bt_trans.lib
action_technology_sdk/framework/bluetooth/include/: bt_manager.h  bt_manager_ble.h  bt_manager_ips.h  btdrv_api.h  btservice_api.h  btservice_tws_api.h
action_technology_sdk/framework/display/font/: CMakeLists.txt  Kconfig
action_technology_sdk/framework/display/vg_lite/: CMakeLists.txt  Kconfig  vg_lite.lib  vglite_mem.c  vglite_util.c
action_technology_sdk/framework/usb/: CMakeLists.txt  usb_device.c  usb_host.c
action_technology_sdk/framework/usb/class/: CMakeLists.txt  cdc_acm.c
action_technology_sdk/framework/usb/host/: CMakeLists.txt
action_technology_sdk/zephyr/lib/libc/: CMakeLists.txt  Kconfig
action_technology_zephyr_sdk/application/app_demo/lvgl_demo/: CMakeLists.txt  Kconfig  linker_no_psram.ld  prj.conf
action_technology_zephyr_sdk/application/bt_watch/: CMakeLists.txt  Kconfig  linker.ld
action_technology_zephyr_sdk/application/bt_watch/boards/: ats3085s_dev_watch_ext_nor.conf  ats3089_dev_watch.conf  ats3089c_dev_watch.conf  ats3089p_dev_watch_sdnand_8b.conf
action_technology_zephyr_sdk/application/bt_watch/config/: config.txt.c
action_technology_zephyr_sdk/application/bt_watch/littlefs/: readme.txt
action_technology_zephyr_sdk/application/bt_watch/res/: bt_watch.enG  bt_watch.sty  bt_watch.zhC  bt_watch.zhT
action_technology_zephyr_sdk/application/bt_watch/resource/: multiLang_translate_table.xls  sans22.font
action_technology_zephyr_sdk/application/bt_watch/simulator/: LVGL.Simulator.sln
action_technology_zephyr_sdk/application/bt_watch/src/: CMakeLists.txt  Kconfig
action_technology_zephyr_sdk/application/bt_watch/udisk/: .input.rec
action_technology_zephyr_sdk/bootloader/drivers/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/drivers/bluetooth/: Kconfig.acts  ecc_acts.c  hci_acts.c
action_technology_zephyr_sdk/bootloader/drivers/disk/: usdhc.c
action_technology_zephyr_sdk/bootloader/drivers/dma/: Kconfig.acts
action_technology_zephyr_sdk/bootloader/drivers/flash/: CMakeLists.txt  flash_dq_mode.c  spi_flash_acts.c  spi_flash_leopard.c
action_technology_zephyr_sdk/bootloader/drivers/gpio/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/drivers/i2c/: CMakeLists.txt  Kconfig  i2c_acts.c
action_technology_zephyr_sdk/bootloader/drivers/input/: CMakeLists.txt  capture_controller.c
action_technology_zephyr_sdk/bootloader/drivers/ipmsg/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/drivers/misc/: Kconfig
action_technology_zephyr_sdk/bootloader/drivers/mmc/: mmc_acts.c  sdio.c
action_technology_zephyr_sdk/bootloader/drivers/mpu/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/drivers/nvram/: CMakeLists.txt  Kconfig  nvram_config.c  nvram_storage.h
action_technology_zephyr_sdk/bootloader/drivers/serial/: CMakeLists.txt  uart_acts.c
action_technology_zephyr_sdk/bootloader/drivers/spi/: CMakeLists.txt  Kconfig
action_technology_zephyr_sdk/bootloader/drivers/spinand/: spinand_acts.c  spinand_acts.h
action_technology_zephyr_sdk/bootloader/drivers/timer/: sys_clock_init.c
action_technology_zephyr_sdk/bootloader/drivers/watchdog/: CMakeLists.txt  Kconfig.acts  wdg_acts.c
action_technology_zephyr_sdk/bootloader/lib/: CMakeLists.txt  Kconfig
action_technology_zephyr_sdk/bootloader/lib/crc/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/lib/libc/: CMakeLists.txt
action_technology_zephyr_sdk/bootloader/lib/os/: CMakeLists.txt  Kconfig  cbprintf_complete.c  crc16_sw.c  crc32_sw.c  mpsc_pbuf.c  reboot.c  (+1 more)
action_technology_zephyr_sdk/framework/display/: CMakeLists.txt  led_manager.c  seg_led_manager.c
action_technology_zephyr_sdk/framework/media/: CMakeLists.txt  Kconfig  media_effect_param.c  media_mix_pcm.c  media_player.c  parser_config.c
action_technology_zephyr_sdk/framework/ota/: CMakeLists.txt  Kconfig  ota_backend_sdcard.c  ota_backend_temp_part.c  ota_storage.c  ota_trans_bt.c
action_technology_zephyr_sdk/framework/sensor/: CMakeLists.txt  algo_port.c  gps_manager.c  sensor_port.c  sensor_sleep.c  sensor_sleep.h
action_technology_zephyr_sdk/zephyr/drivers/: CMakeLists.txt
action_technology_zephyr_sdk/zephyr/framework/: CMakeLists.txt  Kconfig
(+3685 files in other folders)
