# SPDX-License-Identifier: Apache-2.0

add_definitions(-D__ZEPHYR_SUPERVISOR__)

add_subdirectory(console)

add_subdirectory_ifdef(CONFIG_CFG_DRV         	cfg_drv)
add_subdirectory_ifdef(CONFIG_UART_ACTS         serial)
add_subdirectory_ifdef(CONFIG_I2C               i2c)
add_subdirectory_ifdef(CONFIG_GPIO_ACTS         gpio)
add_subdirectory_ifdef(CONFIG_DMA_ACTS          dma)
add_subdirectory_ifdef(CONFIG_SPI               spi)
add_subdirectory(flash)
add_subdirectory_ifdef(CONFIG_SENSOR_ACTS       sensor)
add_subdirectory_ifdef(CONFIG_DISPLAY           display)
add_subdirectory_ifdef(CONFIG_IPMSG_ACTS        ipmsg)
add_subdirectory(misc)
add_subdirectory_ifdef(CONFIG_MMC               mmc)
add_subdirectory_ifdef(CONFIG_BT_DRV            bluetooth)
add_subdirectory_ifdef(CONFIG_NVRAM_CONFIG      nvram)
add_subdirectory_ifdef(CONFIG_AUDIO_ACTS        audio)
add_subdirectory_ifdef(CONFIG_DSP      			dsp)
add_subdirectory_ifdef(CONFIG_ADC      			adc)
add_subdirectory_ifdef(CONFIG_INPUT_DEV      	input)
add_subdirectory_ifdef(CONFIG_POWER_SUPPLY      power_supply)
add_subdirectory(usb)
add_subdirectory_ifdef(CONFIG_WATCHDOG          watchdog)
add_subdirectory_ifdef(CONFIG_SPINAND_ACTS    	spinand)
add_subdirectory(timer)
add_subdirectory_ifdef(CONFIG_RTC_ACTS          rtc)
add_subdirectory_ifdef(CONFIG_PWM          pwm)
add_subdirectory_ifdef(CONFIG_CEC_ACTS          cec)
add_subdirectory_ifdef(CONFIG_MPU_ACTS          mpu)
add_subdirectory_ifdef(CONFIG_COMPENSATION      compensation)
add_subdirectory_ifdef(CONFIG_DVFS              dvfs)
add_subdirectory_ifdef(CONFIG_JPEG_HW           video)
add_subdirectory_ifdef(CONFIG_SE                se)
add_subdirectory(gpu)
add_subdirectory_ifdef(CONFIG_GPS               gps)

if (CONFIG_AES_ACTS OR CONFIG_SHA_ACTS)
add_subdirectory(crypto)
endif()
